--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,16 +1,17 @@
-on: [push, pull_request]
+on: [pull_request]
 name: Test
 jobs:
   test:
+    name: Run tests
     env:
       GO111MODULE: on
     runs-on: ubuntu-latest
+    container:
+      image: golang:1.15.5-buster
     steps:
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.14.x
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Install kubebuilder
+      run: os=$(go env GOOS); arch=$(go env GOARCH); curl -q -s -L https://go.kubebuilder.io/dl/2.3.1/${os}/${arch} | tar -xz -C /tmp/ && mv /tmp/kubebuilder_2.3.1_${os}_${arch} /usr/local/kubebuilder
     - name: Test
       run: go test ./...
