--- a/examples/apm-error-rate.yaml
+++ b/examples/apm-error-rate.yaml
@@ -4,6 +4,9 @@ metadata:
   name: apm-error-rate-example
 spec:
   name: my-service error rate
-  query: "avg(last_5m):sum:trace.http.request.errors{env:stg,service:my-service} / sum:trace.http.request.hits{env:stg,service:my-service} > 1"
-  type: "query alert"
-  message: Service my-service has a high error rate on env:stg
+  query: 'avg(last_5m):sum:trace.servlet.request.errors{env:staging,service:my-service} / sum:trace.servlet.request.hits{env:staging,service:my-service} > 0.05'
+  type: query alert
+  message: 'Service my-service has a high error rate on env:stg'
+  tags:
+    - service:my-service
+    - env:staging
